--- a/google-maps/package.json
+++ b/google-maps/package.json
@@ -4,7 +4,7 @@
   },
   "scripts": {
     "start:built": "tsc -w",
-    "start:run": "nodemon sorting-algorithm/src/index.ts",
+    "start:run": "nodemon ./src/index.ts",
     "start": "concurrently npm:start:*"
   },
   "dependencies": {
